--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: Jekyll:iä käyttävä sivusto
 description: Tervetuloa sivustolle!
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: 
 theme: jekyll-theme-cayman
