--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: Jekyll:iä käyttävä sivusto
 description: Tervetuloa sivustolle!
 description: Cayman is a clean, responsive theme for GitHub Pages.
 theme: jekyll-theme-cayman
+header_pages:
+index.hmtl
