--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: Tervetuloa sivustolle!
 description: Cayman is a clean, responsive theme for GitHub Pages.
 theme: jekyll-theme-cayman
 header_pages:
-index.hmtl
+index.html
